[package]
name = "c64dither"
version = "0.1.0"
authors = ["Stefan Kerkewitz <stefan.kerkewitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
palette = "0.5.0"
vecmath = "1.0.0"
rayon = "1.5.0"
simple-error = "0.2.2"
lazy_static = "1.4.0"